# distributed-inference

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: ci.yml  refresh-lock.yml
docs/: api.md  conf.py  development.md  index.md  model-abstraction.md
docs/concepts/: bounds.md  contexts.md  execution.md  index.md  models.md  persistence.md  runs.md  transforms.md
docs/how-to/: index.md  inspect-runs.md  local-dummy-inference.md  pyvbmc-model.md
plans/: cluster-vbmc-inference-implementation-plan.md  distributed-inference-implementation-plan.md
src/cluster_vbmc_inference/: __init__.py  cli.py
src/distributed_inference/: __init__.py  _validation.py  bounds.py  cli.py  errors.py  execution.py  inspection.py  model.py  run.py  transforms.py
src/distributed_inference/engines/: __init__.py  base.py  dummy.py  pyvbmc.py
src/distributed_inference/persistence/: __init__.py  artifacts.py  local.py  manifests.py  models.py  random_streams.py  runs.py
tests/: conftest.py  test_bounds.py  test_cli.py  test_dummy_engine.py  test_execution.py  test_inspection.py  test_local_persistence.py  test_model.py  test_persistence_inference_runs.py  test_persistence_models.py  test_persistence_random_streams.py  test_persistence_result_manifests.py  test_public_modules.py  test_pyvbmc_adapter.py  test_pyvbmc_artifacts.py  test_pyvbmc_engine.py  test_run_facade.py  test_transforms.py
