[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "distributed-inference"
version = "0.1.0"
description = "Tools for running, collecting, and combining repeated PyVBMC inference runs on local and cluster-backed infrastructure."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Jordan Simbananiye" },
]
keywords = [
  "bayesian-inference",
  "vbmc",
  "pyvbmc",
  "hpc",
  "scientific-computing",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pyvbmc>=1.0",
  "numpy>=1.26",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/CCMI-CDT/distributed-inference"
Issues = "https://github.com/CCMI-CDT/distributed-inference/issues"

[project.scripts]
csvbmc = "cluster_vbmc_inference.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.3",
  "ruff>=0.8",
  "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cluster_vbmc_inference"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests", "validation"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
